dnl
dnl  $Id$
dnl
dnl Process this file with autoconf to produce a configure script.
dnl
AC_INIT()
AC_SUBST(PARTS)

AC_PROG_CC
AC_PROG_INSTALL
AC_CHECK_TOOL(LD, ld, ld)
AC_CHECK_TOOL(AR, ar, ar)

CFLAGS="-Wall -g -O2"

PARTS=

AC_CHECK_HEADER(argp.h,, PARTS="$PARTS argp.o")

AC_CHECK_LIB(bluetooth, hci_open_dev, 
	LIBS="$LIBS -lbluetooth",
	AC_MSG_ERROR(Bluetooth library not found))

dnl Build release name
changequote(<,>)
REL=`echo 'substr($Name,0)$' | tr -d '$: \-' | sed 's/^[A-Za-z]*//' | sed 's/\_/\./'`
VER="$REL `date '+%m/%d/%Y'`"
changequote([,])
AC_DEFINE_UNQUOTED(VERSION, "$VER")

AC_OUTPUT(Makefile parser/Makefile)
