dnl
dnl  $Id$
dnl
dnl Process this file with autoconf to produce a configure script.
dnl
AC_INIT()

dnl Guess host type.
AC_CANONICAL_SYSTEM
AC_CANONICAL_HOST

AM_INIT_AUTOMAKE(bluez-hcidump, 1.5)

CFLAGS="-Wall -g -O2"

AC_PREFIX_DEFAULT(/usr)

dnl Check for programs.
AC_PROG_CC
AC_PROG_AWK
AC_PROG_INSTALL
AM_PROG_LIBTOOL

AC_ARG_WITH(bluez-libs,
	--with-bluez-libs=DIR  BlueZ libraries and header files,
	[
	    BLUEZ_INCDIR="$withval"/include
	    BLUEZ_LIBDIR="$withval"/src
	],[
	    BLUEZ_INCDIR='../libs/include /usr/include/bluetooth'
	    BLUEZ_LIBDIR='../libs/src /usr/lib'
	]
)

AC_SEARCH_HEADERS(bluetooth.h, $BLUEZ_INCDIR,,
	AC_MSG_ERROR(Bluetooth headers not found.
		Please install bluez-libs package.)
)

AC_SEARCH_LIB(bluetooth, hci_open_dev, $BLUEZ_LIBDIR,,
        AC_MSG_ERROR(Bluetooth library not found.
		Please compile and install bluez-libs package.)
)

AC_OUTPUT(Makefile parser/Makefile)
